Address Sphinx 2 compatibility issues
The main change here is that we load information into the template so
that CSS can make decisions about what element hierarchy it can expect,
instead of covering both html4 and html5 writer with a single set of
rules. I also fixed the tox config so that it generates docs for
testing.

This is also in part going to revert the changes in #785. Instead of
maintaining a list of `dl` classes to apply the domain styles to, this
PR instead maintains a list of definition list classes to *not* apply
the domain definition list styling too. There are too many possibilities
to cover with an include list.

--- a/src/sass/_theme_rst.sass
+++ b/src/sass/_theme_rst.sass
@@ -209,7 +209,7 @@
     // Sidebar content is usually less relevant, so adjust the margins and sizes.
     p, ul, dl
       font-size: 90%
-    .last
+    .last, *:last-child
       margin-bottom: 0
     .sidebar-title
       display: block
@@ -326,62 +326,56 @@
     dd
       margin: 0  0 $base-line-height / 2 $base-line-height
       line-height: $base-line-height
-  // This is what Sphinx spits out for it's autodocs. Depending upon what language the person is referencing
-  // these things usually have a class of "method" or "class" or something similar, but really who knows.
-  // Sphinx doesn't give me a generic class on these, so unfortunately I have to apply it to the root dl.
-  // This makes me terribly unhappy and makes this code very nesty. Unfortunately I've seen hand-written docs
-  // that output similar, but not quite the same nesting so this is really the best we can do.
-  dl:not(.docutils)
-    // In Sphinx 2.0+ most DLs no longer contain .docutils, needs tighter scoping using next line
-    &.class, &.data, &.type, &.function
-      margin-bottom: $base-line-height
-      // This would be the equivilant of a .. class::
-      dt
-        display: table
-        margin: $base-line-height / 4 0
-        font-size: 90%
-        line-height: normal
-        background: lighten($class-color, 50%)
-        color: $class-color
-        border-top: solid 3px lighten($class-color, 20%)
-        padding: $base-line-height / 4
-        position: relative
-        &:before
-          color: lighten($class-color, 20%)
-        .headerlink
-          color: $text-color
-          font-size: 100% !important
-      // And this would be the .. method::
-      dl dt
-        margin-bottom: $base-line-height / 4
+  html.writer-html4 & dl:not(.docutils),
+  html.writer-html5 & dl[class]:not(.option-list):not(.field-list):not(.footnote):not(.glossary)
+    margin-bottom: $base-line-height
+    > dt
+      display: table
+      margin: $base-line-height / 4 0
+      font-size: 90%
+      line-height: normal
+      background: lighten($class-color, 50%)
+      color: $class-color
+      border-top: solid 3px lighten($class-color, 20%)
+      padding: $base-line-height / 4
+      position: relative
+      &:before
+        color: lighten($class-color, 20%)
+      .headerlink
+        color: $text-color
+        font-size: 100% !important
+    // In the html4 writer, parameters is a table. In html5 writer, parameters
+    // is a nested dl.field-list
+    dl:not(.field-list) > dt
+      margin-bottom: $base-line-height / 4
+      border: none
+      border-left: solid 3px hsl(0,0%,80%)
+      background: hsl(0,0%,94%)
+      color: $method-color
+      .headerlink
+        color: $headerlink-color
+        font-size: 100% !important
+    > dt:first-child
+      margin-top: 0
+    // Since dts get the callout style, we treat this less as callouts.
+    tt, code
+      font-weight: bold
+      &.descname, &.descclassname
+        background-color: transparent
         border: none
-        border-left: solid 3px hsl(0,0%,80%)
-        background: hsl(0,0%,94%)
-        color: $method-color
-        .headerlink
-          color: $headerlink-color
-          font-size: 100% !important
-      dt:first-child
-        margin-top: 0
-      // Since dts get the callout style, we treat this less as callouts.
-      tt, code
+        padding: 0
+        font-size: 100% !important
+      &.descname
         font-weight: bold
-        &.descname, &.descclassname
-          background-color: transparent
-          border: none
-          padding: 0
-          font-size: 100% !important
-        &.descname
-          font-weight: bold
-      // This is for more advanced parameter control
-      .optional
-        display: inline-block
-        padding: 0 4px
-        color: $black
-        font-weight: bold
-      .property
-        display: inline-block
-        padding-right: 8px
+    // This is for more advanced parameter control
+    .optional
+      display: inline-block
+      padding: 0 4px
+      color: $black
+      font-weight: bold
+    .property
+      display: inline-block
+      padding-right: 8px
   // Doc links to sourcecode
   .viewcode-link, .viewcode-back
     display: inline-block
